# zero2prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
