[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
reqwest = "0.12.5"
serde = { version = "1.0.207", features = ["derive"] }
config = "0.13"
uuid = { version = "1.10.0", features = ["v4"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
log = "0.4.22"
env_logger = "0.11.5"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]