[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
reqwest = "0.12.5"
serde = { version = "1.0.207", features = ["derive"] }
serde-aux = "4"
config = "0.13"
uuid = { version = "1.10.0", features = ["v4"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-actix-web = "0.7.11"
once_cell = "1.19.0"
secrecy = { version = "0.8.0", features = ["serde"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]